--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
+# Dependencies
+node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
 out
 dist
-node_modules
-.vscode-test/
 *.vsix
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.vscode/
+!.vscode/extensions.json
+!.vscode/launch.json  
+!.vscode/tasks.json
+.idea/
+.vscode-test/
+
+# OS
+.DS_Store
+Thumbs.db
+
