Changed ci tests to run headless

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         CI: true
       
     - name: Run tests (if you have them)
-      run: npm test --if-present
+      run: xvfb-run -a npm test --if-present
       env:
         CI: true
         NODE_ENV: test
