Removed packaging on actions for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       env:
         CI: true
       
-    - name: Run tests (if you have them)
+    - name: Run tests
       run: xvfb-run -a npm test --if-present
       env:
         CI: true
@@ -43,12 +43,5 @@ jobs:
       
     - name: Build extension
       run: npm run compile --if-present
-      env:
-        NODE_ENV: production
-
-    - name: Package VSIX
-      run: |
-        npm install -g @vscode/vsce
-        vsce package
       env:
         NODE_ENV: production
