--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,16 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ $default-branch, feature/* ]
+    branches:
+        - $default-branch
+        - 'feature/**'
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+        - main
 
 jobs:
   build-and-test:
+    name: "Build & Test"
     runs-on: ubuntu-latest
     
     steps:
