--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,49 +3,49 @@ name: CI Pipeline
 on:
   push:
     branches:
-        - $default-branch
-        - 'feature/**'
+      - $default-branch
+      - "feature/**"
   pull_request:
     branches:
-        - main
+      - main
 
 jobs:
   build-and-test:
     name: "Build & Test"
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-      env:
-        CI: true
-      
-    - name: TypeScript compilation check
-      run: npx tsc --noEmit
-      env:
-        NODE_ENV: production
 
-    - name: Run ESLint
-      run: npm run lint --if-present
-      env:
-        CI: true
-      
-    - name: Run tests
-      run: xvfb-run -a npm test --if-present
-      env:
-        CI: true
-        NODE_ENV: test
-      
-    - name: Build extension
-      run: npm run compile --if-present
-      env:
-        NODE_ENV: production
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+        env:
+          CI: true
+
+      - name: TypeScript compilation check
+        run: npx tsc --noEmit
+        env:
+          NODE_ENV: production
+
+      - name: Run ESLint
+        run: npm run lint --if-present
+        env:
+          CI: true
+
+      - name: Run tests
+        run: xvfb-run -a npm test --if-present
+        env:
+          CI: true
+          NODE_ENV: test
+
+      - name: Build extension
+        run: npm run compile --if-present
+        env:
+          NODE_ENV: production
