feat(progress): implement user progress persistence
- Use VSCode globalState to store user progress across workspaces
- Clean activate entry function of unnecessary template code
- Icons on tree items represent challenge completion status
- userInfo API simplifies storing and saving progress

Closes #3

--- a/package.json
+++ b/package.json
@@ -12,6 +12,18 @@
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
+    "commands": [
+      {
+        "command": "codingChallengeProvider.refreshEntry",
+        "title": "Refresh",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "codingChallengeProvider.markCompleted",
+        "title": "Mark Challenge As Completed",
+        "icon": "$(check)"
+      }
+    ],
     "viewsContainers": {
       "activitybar": [
         {
@@ -28,6 +40,22 @@
           "name": "Coding Challenges",
           "contextualTitle": "Challenge Explorer",
           "icon": "$(copilot)"
+        }
+      ]
+    },
+    "menus": {
+      "view/title": [
+        {
+          "command": "codingChallengeProvider.refreshEntry",
+          "when": "view === codingChallenge",
+          "group": "navigation"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "codingChallengeProvider.markCompleted",
+          "when": "view === codingChallenge",
+          "group": "inline"
         }
       ]
     }
